English l10n of goals

--- a/main/conf/locale/cs/LC_MESSAGES/djangojs.po
+++ b/main/conf/locale/cs/LC_MESSAGES/djangojs.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-07-12 18:29+0200\n"
+"POT-Creation-Date: 2014-08-07 20:16+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -17,80 +17,94 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: geography/static/dist/js/blind-maps.min.js:176
-#: geography/static/dist/js/blind-maps.min.js:313
-#: geography/static/js/controllers.js:45
-#: geography/static/js/controllers.js:182
+#: geography/static/dist/js/blind-maps.min.js:212
+#: geography/static/dist/js/blind-maps.min.js:239
+#: geography/static/dist/js/blind-maps.min.js:376
+#: geography/static/dist/js/blind-maps.min.js:510
+#: geography/static/js/controllers.js:77
+#: geography/static/js/controllers.js:104
+#: geography/static/js/controllers.js:241
+#: geography/static/js/controllers.js:375
 msgid "V aplikaci bohužel nastala chyba."
 msgstr "V aplikaci bohužel nastala chyba."
 
-#: geography/static/dist/js/blind-maps.min.js:392
+#: geography/static/dist/js/blind-maps.min.js:588
+#: geography/static/js/services.js:14
+msgid "USA"
+msgstr "USA"
+
+#: geography/static/dist/js/blind-maps.min.js:589
+#: geography/static/js/services.js:15
+msgid "Svět"
+msgstr "Svět"
+
+#: geography/static/dist/js/blind-maps.min.js:594
 #: geography/static/js/services.js:20
 msgid "Politická mapa"
 msgstr "Politická mapa"
 
-#: geography/static/dist/js/blind-maps.min.js:405
+#: geography/static/dist/js/blind-maps.min.js:607
 #: geography/static/js/services.js:33
 msgid "Vodstvo"
 msgstr "Vodstvo"
 
-#: geography/static/dist/js/blind-maps.min.js:410
+#: geography/static/dist/js/blind-maps.min.js:612
 #: geography/static/js/services.js:38
 msgid "Povrch"
 msgstr "Povrch"
 
-#: geography/static/dist/js/blind-maps.min.js:638
-#: geography/static/js/services.js:266
-msgid "Jak to funguje?"
-msgstr "Jak to funguje?"
-
-#: geography/static/dist/js/blind-maps.min.js:639
-#: geography/static/js/services.js:267
+#: geography/static/dist/js/blind-maps.min.js:843
+#: geography/static/js/services.js:269
 msgid "O prjektu"
 msgstr "O prjektu"
 
-#: geography/static/dist/js/blind-maps.min.js:640
-#: geography/static/js/services.js:268
+#: geography/static/dist/js/blind-maps.min.js:844
+#: geography/static/js/services.js:270
 msgid "Přehled map"
 msgstr "Přehled map"
 
-#: geography/static/dist/js/blind-maps.min.js:1319
-#: geography/static/js/directives.js:17
+#: geography/static/dist/js/blind-maps.min.js:1526
+#: geography/static/js/directives.js:18
 msgid "Odhad znalosti"
 msgstr "Odhad znalosti"
 
-#: geography/static/dist/js/blind-maps.min.js:1346
-#: geography/static/js/directives.js:44
+#: geography/static/dist/js/blind-maps.min.js:1554
+#: geography/static/js/directives.js:46
 msgid "Moje znalosti"
 msgstr "Moje znalosti"
 
-#: geography/static/dist/js/blind-maps.min.js:1352
-#: geography/static/js/directives.js:50
+#: geography/static/dist/js/blind-maps.min.js:1561
+#: geography/static/js/directives.js:53
 msgid "Průměrný nový uživatel"
 msgstr "Průměrný nový uživatel"
 
-#: geography/static/dist/js/blind-maps.min.js:1479
-#: geography/static/js/directives.js:177
+#: geography/static/dist/js/blind-maps.min.js:1692
+#: geography/static/js/directives.js:184
 msgid "Naučeno"
 msgstr "Naučeno"
 
-#: geography/static/dist/js/blind-maps.min.js:1486
-#: geography/static/js/directives.js:184
+#: geography/static/dist/js/blind-maps.min.js:1699
+#: geography/static/js/directives.js:191
 msgid "Procvičováno"
 msgstr "Procvičováno"
 
-#: geography/static/dist/js/blind-maps.min.js:1525
-#: geography/static/js/directives.js:223
+#: geography/static/dist/js/blind-maps.min.js:1738
+#: geography/static/js/directives.js:230
 msgid "Aktuální úroveň"
 msgstr "Aktuální úroveň"
 
-#: geography/static/dist/js/blind-maps.min.js:1533
-#: geography/static/js/directives.js:231
+#: geography/static/dist/js/blind-maps.min.js:1742
+#: geography/static/js/directives.js:234
+msgid "bodů"
+msgstr "bodů"
+
+#: geography/static/dist/js/blind-maps.min.js:1748
+#: geography/static/js/directives.js:240
 msgid "Příští úroveň"
 msgstr "Příští úroveň"
 
-msgid "bodů"
-msgstr "bodů"
+msgid "Jak to funguje?"
+msgstr "Jak to funguje?"
 
 msgid "Slepé Mapy"
 msgstr "Slepé Mapy"
@@ -143,27 +157,24 @@ msgstr "Znovu procvičovat"
 msgid "Procvičovat"
 msgstr "Procvičovat"
 
-msgid "Svět"
-msgstr "Svět"
-
 msgid "Zeměpis hrou"
 msgstr "Zeměpis hrou"
 
 msgid "Zeměpis hrou - text"
 msgstr ""
 "Procvičte si své znalosti zeměpisu hravou formou. V aktuální verzi zatím "
-"soutěžíte jen sami se sebou, respektive proti systému. Dokážete obarvit na "
-"zeleno celou mapu Evropy? Celou ČR? A co celý svět?"
+"soutěžíte jen sami se sebou, respektive proti systému. Dokážete obarvit "
+"na zeleno celou mapu Evropy? Celou ČR? A co celý svět?"
 
 msgid "Adaptabilní procvičování"
 msgstr "Adaptabilní procvičování"
 
 msgid "Adaptabilní procvičování - text"
 msgstr ""
-"Každá slepá mapa nabízí adaptabilní procvičování "
-" - podle toho, jaké máte vědomosti, aplikace volí podobu otázek "
-"(otevřená, výběr z možností) a frekvenci opakování. Aplikace vám tak "
-"předkládá státy, jejichž procvičení je pro vás nejužitečnější."
+"Každá slepá mapa nabízí adaptabilní procvičování  - podle toho, jaké máte "
+"vědomosti, aplikace volí podobu otázek (otevřená, výběr z možností) a "
+"frekvenci opakování. Aplikace vám tak předkládá státy, jejichž procvičení "
+"je pro vás nejužitečnější."
 
 msgid "Vizualizace znalostí"
 msgstr "Vizualizace znalostí"
@@ -179,14 +190,54 @@ msgstr "Specializovaný systém"
 msgid "Specializovaný systém - text"
 msgstr ""
 "Procvičování slepých map nabízí i řada jiných výukových systémů, ty však "
-"většinou pokrývají mnoho dílčích oblastí. Náš systém se soustředí pouze na "
-"slepé mapy, díky čemuž je pro učení v této oblasti optimalizovaný."
+"většinou pokrývají mnoho dílčích oblastí. Náš systém se soustředí pouze "
+"na slepé mapy, díky čemuž je pro učení v této oblasti optimalizovaný."
 
 msgid "Učení z dat"
 msgstr "Učení z dat"
 
 msgid "Učení z dat - text"
 msgstr ""
-"Aplikace se učí z dat od všech uživatelů. Výběr otázek je založen na těchto "
-"datech, nikoliv na znalostech experta na zeměpis, který \"ví\", jestli je "
-"těžší poznat Keňu nebo Nigérii."
+"Aplikace se učí z dat od všech uživatelů. Výběr otázek je založen na "
+"těchto datech, nikoliv na znalostech experta na zeměpis, který \"ví\", "
+"jestli je těžší poznat Keňu nebo Nigérii."
+
+msgid "Jméno"
+msgstr "Jméno"
+
+msgid "Příjmení"
+msgstr "Příjmení"
+
+msgid "E-mail"
+msgstr "E-mail"
+
+msgid "Přehled znalostí uživatele"
+msgstr "Přehled znalostí uživatele"
+
+msgid "Osobní cíle"
+msgstr "Osobní cíle"
+
+msgid "Vytvořit cíl"
+msgstr "Vytvořit cíl"
+
+msgid "Žádné cíle zatím nebyly nestanoveny"
+msgstr "Žádné cíle zatím nebyly nestanoveny"
+
+msgid "Dnes již není třeba procvičovat"
+msgstr "Dnes již není třeba procvičovat"
+
+msgid "Odstranit cíl - lze jen v den jeho vytvoření"
+msgstr "Odstranit cíl - lze jen v den jeho vytvoření"
+
+msgid "Postup plnění cíle"
+msgstr "Postup plnění cíle"
+
+msgid "Splněno"
+msgstr "Splněno"
+
+msgid "Dnešní nesplněné procvičování"
+msgstr "Dnešní nesplněné procvičování"
+
+msgid "Více než den nesplněného procvičování"
+msgstr "Více než den nesplněného procvičování"
+
